Deploy working LogiTrack 8090 integrated app